# subscree

./: README.md  alembic.ini  pyproject.toml
src/: auth.py  main.py  middleware.py  settings.py  worker.py
src/api/: accounts.py  customers.py  products.py  users.py  utils.py
src/data/: base.py  utils.py
src/data/accounts/: crud.py  db.py  models.py
src/data/customers/: db.py
src/data/products/: crud.py  db.py  models.py
src/data/subscriptions/: crud.py  db.py
src/data/users/: crud.py  db.py  models.py
src/worker/: worker.py
